[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
jsonschema = { version = "0.16.1", features = ["draft202012", "draft201909"] }
serde_json = "1.0.92"
thiserror = "1.0.38"
